--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ jupyterlab
 matplotlib
 numpy
 PyYAML
-tensorboard==1.13.1
-tensorboardX==1.6
-tensorflow==1.15.2
-pytorch==1.0.1
-torchvision==0.2.2
+tensorboard>=1.13.1
+tensorboardX>=1.6
+tensorflow==2.0.0b1
+pytorch>=1.0.1
+torchvision>=0.2.2
 tqdm
